fixes #10. thumbnails no longer overlap with item titles

--- a/css/less/base.less
+++ b/css/less/base.less
@@ -115,7 +115,6 @@ h6 {
   h4,
   h5,
   h6 {
-    margin: -2px;
     padding: 2px;
   }
   &>*:first-child {
@@ -162,6 +161,9 @@ h6 {
       .fancy-heading();
     }
   }
+}
+.thumbnail {
+  margin: 5px 5px 5px 0;
 }
 .element-name {
   padding-right: 1em;
